--- a/src/index.css
+++ b/src/index.css
@@ -122,3 +122,7 @@ h6 {
 .ant-picker-now-btn:hover {
   color: #009737 !important;
 }
+/* drag and drop image upload styles */
+.ant-upload-wrapper .ant-upload-drag:not(.ant-upload-disabled):hover {
+  border-color: #009737 !important;
+}
