--- a/src/Components/Real Time/styles.css
+++ b/src/Components/Real Time/styles.css
@@ -11,6 +11,11 @@
   width: 170px;
   margin-right: 12px;
 }
+@media (min-width: 426px) and (max-width: 768px) {
+  .field_teamselectfieldContainer {
+    margin-bottom: 10px;
+  }
+}
 .field_calendarContainer {
   display: flex;
   justify-content: flex-end;
