--- a/src/Components/Alerts/styles.css
+++ b/src/Components/Alerts/styles.css
@@ -8,3 +8,8 @@
   margin-bottom: 20px;
   justify-content: flex-end;
 }
+@media (min-width: 300px) and (max-width: 767px) {
+  .alerts_calendarContainer {
+    justify-content: flex-start;
+  }
+}
