--- a/src/layout/sidebarstyles.css
+++ b/src/layout/sidebarstyles.css
@@ -58,7 +58,7 @@
   position: absolute;
   top: 84%;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  width: 68%;
+  width: 51.2%;
   background-color: #f7f7f7;
   z-index: 1;
   border-radius: 6px;
@@ -85,16 +85,16 @@
   align-items: center;
 }
 .navbar_discoversearchnbar {
-  width: 240px !important;
+  width: 270px !important;
   height: 40px !important;
   font-size: 16px !important;
-  border-radius: 0px !important;
-  border-top-left-radius: 7px !important;
-  border-bottom-left-radius: 7px !important;
+  border-radius: 7px !important;
+  /* border-top-left-radius: 7px !important; */
+  /* border-bottom-left-radius: 7px !important; */
 }
 @media (min-width: 300px) and (max-width: 700px) {
   .navbar_discoversearchnbar {
-    width: 140px !important;
+    width: 100% !important;
     height: 30px !important;
   }
 }
