--- a/src/components/Analytics/styles.css
+++ b/src/components/Analytics/styles.css
@@ -81,6 +81,7 @@
 }
 .screenshots_nodatafound {
   font-weight: 600;
+  font-size: 16px;
 }
 .screenshot_images {
   width: 220px;
@@ -97,4 +98,19 @@
   padding: 2px;
   color: rgb(20, 184, 166);
   cursor: pointer;
+}
+.screenshotModal_date {
+  margin-top: 16px;
+  margin-bottom: 12px;
+  font-weight: 600;
+  font-size: 16px;
+}
+.screenshot_modalImage {
+  width: 100%;
+}
+.prismazoom {
+  max-width: 100%;
+  max-height: 80vh; /* Adjust as needed to fit within your modal */
+  overflow: hidden;
+  position: relative;
 }
