--- a/src/components/Settings/styles.css
+++ b/src/components/Settings/styles.css
@@ -248,6 +248,10 @@
   overflow: hidden;
   word-break: break-all;
 }
+.teammembers_count {
+  margin-top: 10px;
+  font-weight: 600;
+}
 .teammembercard_buttons {
   width: 106px !important;
   font-size: 12px !important;
@@ -335,4 +339,13 @@
 }
 .alertrules_tabledeletebutton:hover {
   transform: scale(1.2);
+}
+.teammembers_out {
+  margin-top: 10px;
+  font-weight: 600;
+  font-size: 15px;
+  margin-bottom: 10px;
+}
+.addmodaltitle {
+  font-weight: 500;
 }
