--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -191,3 +191,61 @@
   margin-top: 30px;
   opacity: 0.7;
 }
+
+/* downloads styles */
+.downloads_mainContainer {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #14b8a61a;
+  /* background-color: #f0f4f3; */
+}
+.downloads_card {
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px,
+    rgba(0, 0, 0, 0.05) 0px 5px 10px;
+  width: 400px;
+  border-radius: 9px;
+  z-index: 1;
+  padding: 24px 12px;
+  background-color: white;
+  border-color: 1px solid #14b8a61a;
+}
+.dowloadslogo_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 6px;
+}
+.downloads_contentcontainer {
+  padding: 12px 40px;
+}
+.downloads_content {
+  color: gray;
+  font-size: 14px;
+  line-height: 24px;
+}
+.exedownload_button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 40px;
+  background-color: #25a17d;
+  border-color: #25a17d;
+  border-radius: 6px;
+  box-shadow: 0 2px 0 #5805ff0f;
+  color: #fff;
+  display: flex;
+  font-weight: 600;
+  margin-top: 30px;
+}
+.exedownload_button:hover {
+  background-color: #009737 !important;
+  border-color: #25a17d !important;
+  color: white !important;
+}
+.exedownload_button:active {
+  transform: scale(0.9);
+  box-shadow: 3px 2px 22px 1px rgba(85, 226, 108, 0.507);
+}
