--- a/src/components/Settings/styles.css
+++ b/src/components/Settings/styles.css
@@ -258,7 +258,9 @@
   padding: 12px;
   border-radius: 7px;
   width: 100%;
+  height: 150px;
   background-color: rgb(255, 255, 255);
+  position: relative;
 }
 .teammember_name {
   font-weight: 600;
@@ -275,8 +277,12 @@
   margin-top: 10px;
   font-weight: 600;
 }
+.teammember_changeteamrow {
+  position: absolute;
+  bottom: 12px;
+}
 .teammembercard_buttons {
-  width: 106px !important;
+  width: 104px !important;
   font-size: 12px !important;
   padding: 0px !important;
   overflow: hidden !important;
