--- a/src/index.css
+++ b/src/index.css
@@ -137,7 +137,19 @@ h6 {
   transform: scale(0.9);
   box-shadow: 3px 2px 22px 1px rgba(85, 226, 108, 0.507);
 }
-
+/* antd pagination select */
+.ant-pagination
+  .ant-pagination-options-size-changer:hover
+  .ant-select-selector {
+  border-color: #25a17d !important;
+}
+.ant-select-outlined:not(.ant-select-disabled):not(
+    .ant- select-customize-input
+  ):not(.ant-pagination- size-changer)
+  .ant-select-selector {
+  border-color: #d9d9d9 !important;
+  box-shadow: 0 0 2px rgba(5, 241, 123, 0.1) !important;
+}
 /* drag and drop image upload styles */
 .ant-upload-wrapper .ant-upload-drag:not(.ant-upload-disabled):hover {
   border-color: #009737 !important;
