signup page created

--- a/src/components/Common/commonstyles.css
+++ b/src/components/Common/commonstyles.css
@@ -198,6 +198,10 @@
   transform: scale(0.9);
   box-shadow: 3px 2px 22px 1px rgba(85, 226, 108, 0.507);
 }
+/* paginationselect */
+.pagination_selectfield {
+  width: 100%;
+}
 /* warning modal */
 .warningmodal_cancelbutton {
   margin-right: 20px;
