--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -44,6 +44,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 .login_logo {
   width: 160px;
