--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,34 @@ h6 {
   font-size: revert !important;
   font-weight: revert !important;
 }
+[type="text"]:focus,
+[type="email"]:focus,
+[type="url"]:focus,
+[type="password"]:focus,
+[type="number"]:focus,
+[type="date"]:focus,
+[type="datetime-local"]:focus,
+[type="month"]:focus,
+[type="search"]:focus,
+[type="tel"]:focus,
+[type="time"]:focus,
+[type="week"]:focus,
+[multiple]:focus,
+textarea:focus,
+select:focus {
+  outline: none;
+  outline-offset: none;
+  --tw-ring-inset: var(--tw-empty, /*!*/ /*!*/);
+  --tw-ring-offset-width: 0px;
+  --tw-ring-offset-color: none;
+  --tw-ring-color: none;
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
+    var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
+    calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow);
+  border-color: transparent; /* Removes the focus border */
+}
 
 /* sidebar color change */
 .ant-layout-sider .ant-layout-sider-children {
@@ -62,13 +90,74 @@ h6 {
 .ant-input-suffix {
   color: #808080a6;
 }
+.ant-input-outlined:hover {
+  border-color: #25a17d !important;
+}
+.ant-input-outlined:focus-within {
+  border-color: #25a17d !important;
+  box-shadow: 0 0 0 0.2rem #25a17e69;
+}
+/* antd search styles */
+.ant-input-search
+  > .ant-input-group
+  > .ant-input-group-addon:last-child
+  .ant-input-search-button:not(.ant-btn-primary):hover {
+  color: #25a17d !important;
+}
+.ant-btn-default:not(:disabled):not(.ant-btn-disabled):hover {
+  border-color: #25a17d !important;
+}
 /* antd picker styles */
-/* .ant-picker-outlined:hover {
+.ant-select-selector:hover {
+  border-color: #25a17d !important;
+}
+.ant-select-selector:focus-within {
+  box-shadow: 0 0 0 0.2rem #25a17e69;
+}
+.ant-picker-outlined:hover {
   border-color: #25a17d !important;
 }
 .ant-picker-outlined:focus-within {
-  box-shadow: 0 0 0 2px #25a17e48 !important;
-} */
+  box-shadow: 0 0 0 2px #25a17e6b !important;
+}
+.ant-picker-outlined:focus-within {
+  border-color: #25a17d !important;
+}
+.ant-picker-header-view button:hover {
+  color: #25a17d !important;
+}
+/* antd datepicker styles */
+.ant-picker-cell-in-view.ant-picker-cell-selected .ant-picker-cell-inner {
+  background: #25a17d !important;
+}
+/* ant double datepicker styles */
+.ant-picker-range .ant-picker-active-bar {
+  background: #25a17d !important;
+}
+.ant-picker-cell-in-view.ant-picker-cell-range-end .ant-picker-cell-inner {
+  background-color: #25a17d !important;
+}
+.ant-picker-cell-in-view.ant-picker-cell-range-start .ant-picker-cell-inner {
+  background-color: #25a17d !important;
+}
+
+.ant-picker-cell-in-view.ant-picker-cell-today .ant-picker-cell-inner::before {
+  border-color: #25a17d !important;
+}
+
+.ant-picker-cell-in-view.ant-picker-cell-range-start:not(
+    .ant-picker-cell-range-start-single
+  )::before,
+.ant-picker-cell-in-view.ant-picker-cell-in-range::before,
+.ant-picker-cell-in-view.ant-picker-cell-range-end:not(
+    .ant-picker-cell-range-end-single
+  )::before,
+.ant-picker-time-panel-column
+  > li.ant-picker-time-panel-cell-selected
+  .ant-picker-time-panel-cell-inner {
+  background: #25a17e13 !important;
+}
+
 /* tab color change */
 .ant-tabs-ink-bar {
   border-bottom: 2px solid #25a17d;
@@ -154,15 +243,19 @@ h6 {
     .ant-select-customize-input
   ):not(.ant-pagination-size-changer)
   .ant-select-selector {
-  border-color: #d9d9d9 !important;
-  box-shadow: 0 0 2px rgba(5, 241, 123, 0.1) !important;
+  border-color: #25a17d !important;
+  /* box-shadow: 0 0 2px rgba(5, 241, 123, 0.1) !important; */
+  box-shadow: 0 0 0 2px #25a17e62 !important;
   outline: 0;
+}
+.ant-table-wrapper .ant-table-pagination.ant-pagination {
+  margin: 16px 12px !important;
 }
 /* drag and drop image upload styles */
 .ant-upload-wrapper .ant-upload-drag:not(.ant-upload-disabled):hover {
-  border-color: #009737 !important;
+  border-color: #25a17d !important;
 }
 /* antd table spin */
 .ant-spin .ant-spin-dot-item {
-  background: #009737 !important;
+  background: #25a17d !important;
 }
