--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -154,9 +154,47 @@
   width: 100%;
   margin-top: 6px;
 }
+.login_inputfields:hover {
+  border-color: #25a17d !important;
+}
+.login_inputfields:focus-within {
+  border-color: #25a17d !important;
+  box-shadow: 0 0 0 2px #25a17e17;
+}
+.login_errorinputfields {
+  height: 36px;
+  background-color: #ffffff;
+  background-image: none;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #d9d9d9;
+  border-radius: 6px;
+  transition: all 0.2s;
+  width: 100%;
+  margin-top: 5px;
+}
 .login_errormessage {
   color: #ff4d4f;
   margin-top: 4px;
+}
+.login_passwordinputfield {
+  height: 36px;
+  background-color: #ffffff;
+  background-image: none;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #d9d9d9;
+  border-radius: 6px;
+  transition: all 0.2s;
+  width: 100%;
+  margin-top: 5px;
+}
+.login_passwordinputfield:hover {
+  border-color: #25a17d !important;
+}
+.login_passwordinputfield:focus-within {
+  border-color: #25a17d !important;
+  box-shadow: 0 0 0 2px #25a17e17;
 }
 .fotgotpassword_text {
   text-align: end;
